fixed play button on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -160,4 +160,20 @@
     border-color: #E6E6E6;
     z-index: 9999;
   }
+
+  .btn-homepage {
+  padding: 5px 10px 5px 10px;
+  margin: 1px 1px 1px 1px;
+  border:1px solid rgba(255,255,255,0);
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Arimo', sans-serif;
+  font-weight: 300;
+  color: white;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align: center;
+  transition: all 0.2s;
+  background-color: #f14e5e;
+  }
 }
